# comp-4360-project

./: .gitignore  README.md  fetch_data.py  pyproject.toml
configs/: finetune__vit_base__img224__200ep.yaml  simmim_chexpert_finetune_smoke.yaml  simmim_chexpert_smoke.yaml  simmim_finetune__vit_base__img224__100ep.yaml  simmim_finetune__vit_base__img224__100ep_ablation.yaml  simmim_pretrain__vit_base__img224__100ep.yaml  simmim_pretrain__vit_base__img224__100ep_ablation.yaml  simmim_pretrain__vit_base__img224__800ep.yaml
data/: data_simmim.py
inference/: inference.ipynb
output/only_finetune/finetune__vit_base__img224__200ep/: config.json  log_rank0.txt  log_rank1.txt
output/simmim_finetune/simmim_finetune__vit_base__img224__100ep/: config.json  log_rank0.txt  log_rank1.txt
output/simmim_finetune_ablation/: finetune_ablation_summary.txt
output/simmim_finetune_ablation/simmim_finetune__vit_base__img224__100ep_ablation/: config.json  (+2 more)
output/simmim_pretrain_ablation/: baseline_vs_ablation_summary.csv
slides/initial-proposal/: main.tex
src/: compute_chexpert_mean_std.py  config.py  logger.py  lr_scheduler.py  main.py  main_finetune.py  main_pretrain.py  optimizer.py  utils.py
src/Plotting Scripts/: plot_finetune_log.py  plot_pretrain_log.py  pretrain_ablation.py
src/data/: __init__.py  data_finetune.py  data_simmim.py
src/models/: build.py  simmim.py  vision_transformer.py
src/plotting_scripts/: finetune_ablation.py  plot_finetune_longrun.py  plot_pretrain_ablation.py  plot_pretrain_log.py  plot_requested_comparisons.py  pretrain_ablation.py
(+10 files in other folders)
